# testography

./: .editorconfig  .gitattribute  .gitignore  Cargo.toml  Makefile  README.md  codecov.yml  renovate.json  testography.kdl
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/parser-rust/: Cargo.toml
crates/types/: Cargo.toml
docs/: artifact-stage-contract.md
docs/adr/: 20260617T160705Z_process-based-component-protocol.md  20260618T141000Z_pipeline-artifact-handoff-contract.md  20260618T143221Z_reporter-output-contract.md  20260620T000000Z_staged-evidence-artifact-contracts.md  20260621T000000Z_staged-pipeline-artifact-handoff-contract.md  20260623T120000Z_worktree-local-kdl-configuration.md  README.md  TEMPLATE.md
plugins/parser/rust/: Cargo.toml
plugins/parser/rust/src/: lib.rs  main.rs
plugins/parser/rust/tests/: rust_parser.rs
plugins/parser/rust/tests/fixtures/rust/: direct_path.rs  for_loop_assertion.rs  literals_and_imports.rs  multi_assertion.rs  negative_literal.rs  nested_module.rs  not_rust.txt  parent_use_not_inherited.rs  parse_error.rs  prefix_qualified_call.rs  top_level_macro.rs  unresolved_call.rs  unsupported_macro.rs
schemas/assessed_module_evidence/: assessed_module_evidence.v0.json
schemas/module_evidence/: module_evidence.v0.json
schemas/parsed_evidence/: parsed_evidence.v0.json
schemas/testography-assessed-artifact/: testography-assessed-artifact.v0.json
scripts/: setup-dev.sh
(+100 files in other folders)
